--- a/package.json
+++ b/package.json
@@ -3,12 +3,7 @@
   "version": "0.0.0",
   "description": "A RESTful authentication middleware for Express",
   "main": "lib/index.js",
-  "dependencies": {
-    "sechash": "~0.2.1",
-    "merge-recursive": "0.0.0",
-    "expires": "0.0.0",
-    "json-output": "0.0.1"
-  },
+  "dependencies": {},
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
